# streamer

./: .gitignore  AGENTS.md  BUILD.md  README.md  main.py  pyproject.toml  req.txt  requirements.txt  run_tests.py
.github/workflows/: ci.yml
docs/: ffmpeg-setup.md  performance-testing.md
src/: controller.py  main.py
src/config/: manager.py  models.py  schema.py
src/core/: capture.py  encoder.py  streamer.py
src/installer/: README.md  build-nuitka.py  build-pyinstaller.py
src/tests/: test_capture.py  test_config.py
src/ui/: main_window.py  overlay_window.py
tasks/: step1.md  step2.md  step3.md  step4-1.md  step4-2.md  step4-3.md  step4-4.md  step4-5.md  step4-6.md  step4-7.md  step4-8.md  step4-9.md
