[project]
name = "streamer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "appdirs>=1.4.4",
    "dxcam>=0.5.0",
    "loguru>=0.7.3",
    "numpy>=2.4.3",
    "opencv-python>=4.13.0.92",
    "pydantic>=2.12.5",
    "pyside6>=6.10.2",
    "vidgear[core]>=0.3.4",
]

[project.optional-dependencies]
build = [
    "nuitka>=2.0.0",
    "pyinstaller>=6.0.0",
]
dev = [
    "black>=24.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pytest>=8.0.0",
    "pytest-qt>=4.4.0",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
